Fix base path for GitHub Pages deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build slides
         working-directory: ./slidev
-        run: npm run build
+        run: npm run build -- --base /${{ github.event.repository.name }}/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
